# EPITECH

TECH_1/CPE/CPE_BSQ_2017/: Makefile
TECH_1/CPE/CPE_matchstick_2017/: Makefile  (+1 more)
TECH_1/SYN_automakefile_2017/: automakefile  automakefile.sh
TECH_1/SYN_palindrome_2017/: Makefile  requirement.c
TECH_2/FUN_deBruijn_2018/: Makefile
TECH_3/B53EMAILS/: B5-MP2-3emails-moussa.fofana-Paris.docx
TECH_3/CPP/CPP_babel_2019/: .gitignore  CMakeLists.txt  launch.sh
TECH_3/CPP/CPP_babel_2019/client/: BabelTcpClient.cpp  BabelUdpClient.cpp  CoreClient.cpp  main.cpp
TECH_3/CPP/CPP_babel_2019/client/include/: BabelTcpClient.hpp  BabelUdpClient.hpp  CoreClient.hpp  IClient.hpp  IClientnew.hpp  main.hpp
TECH_3/CPP/CPP_babel_2019/portaudio/: PortAudio.cpp  PortAudio.hpp  test.cpp.bckp
TECH_3/CPP/CPP_babel_2019/server/: BabelTcpServer.cpp  BabelTcpServerClient.cpp  BabelUdpServer.cpp  BabelUdpServerClient.cpp  CoreServer.cpp  CoreServer.hpp  main.cpp
TECH_3/CPP/CPP_babel_2019/server/include/: BabelUdpServer.hpp  BabelUdpServerClient.hpp  IServerClient.hpp
TECH_3/DEV/DEV_Epicture_2019/: CMakeLists.txt  Protocol.md  launch.sh
TECH_3/DEV/DEV_Epicture_2019/include/Client/: Client.hpp  IClient.hpp  UDPClient.hpp
TECH_3/DEV/DEV_Epicture_2019/include/Object/: Command.hpp  ECSPlayer.hpp  IObject.hpp  ObjectFactory.hpp
TECH_3/DEV/DEV_Epicture_2019/include/SFML/: Game.hpp  IGame.hpp
TECH_3/DEV/DEV_Epicture_2019/include/SFML/Game/: Land.hpp  Move.hpp
TECH_3/DEV/DEV_Epicture_2019/include/SFML/GameEngine/: AssetManager.hpp  Clock.hpp  GameState.hpp  InputManager.hpp  State.hpp  StateMachine.hpp
TECH_3/DEV/DEV_Epicture_2019/include/Server/: UDP_Server.hpp
TECH_3/DEV/DEV_Epicture_2019/src/Client/: Client.cpp  UDP_client.cpp  main.cpp
TECH_3/DEV/DEV_Epicture_2019/src/Client/SFML/: Game.cpp
TECH_3/DEV/DEV_Epicture_2019/src/Client/SFML/Game/: Land.cpp
TECH_3/DEV/DEV_Epicture_2019/src/Client/SFML/GameEngine/: AssetManager.cpp  GameState.cpp
TECH_3/DEV/DEV_Epicture_2019/src/Object/: ECSPlayer.cpp  command.cpp
TECH_3/DEV/DEV_Epicture_2019/src/Server/: UDP_Server.cpp  main.cpp
TECH_3/DEV/DEV_Epicture_2019/src/Server/include/: IServer.hpp
TECH_3/DEV/DEV_Epicture_2019/src/menu/: AssetManager.cpp  InputManager.hpp  MainMenuState.hpp  menu.arj
(+658 files in other folders)
