project(Babel)
cmake_minimum_required(VERSION 2.8.12)
add_definitions("-fPIC")
include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
conan_basic_setup()

FILE(GLOB ServerSources server/*.cpp)
FILE(GLOB ClientSources client/*.cpp)
FILE(GLOB AudioSources portaudio/*.cpp)
find_package(Qt5Widgets CONFIG REQUIRED)
find_package(Qt5Network CONFIG REQUIRED)
set(ClientHeaders client/include/)
set(ServerHeaders server/include/)
set(AudioHeaders portaudio/)

include_directories(${CMAKE_INCLUDE_PATH} ${ClientHeaders} ${ServerHeaders} ${AudioHeaders})
add_executable(babel_client ${ClientSources} ${AudioSources})
add_executable(babel_server ${ServerSources} ${AudioSources})
target_link_libraries(babel_client ${CONAN_LIBS} Qt5::Network Qt5::Widgets)
target_link_libraries(babel_server ${CONAN_LIBS})
